# atym-toolchain

./: .gitignore  .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: container.yml  main.yml
board_specific/arduino_portenta_h7/blinky-h7/: build.yaml  main.c
board_specific/b_u585i_iot02a/blinky-button/: CMakeLists.txt  build.yaml  main.c
board_specific/b_u585i_iot02a/blinky-u585/: CMakeLists.txt  build.yaml  main.c
board_specific/b_u585i_iot02a/blinky-xmas/: CMakeLists.txt  build.yaml  main.c
board_specific/b_u585i_iot02a/modbus-server/: CMakeLists.txt  build.yaml
board_specific/b_u585i_iot02a/sensor/: CMakeLists.txt  build.yaml  main.c
board_specific/b_u585i_iot02a/sensor-IMU/: CMakeLists.txt  build.yaml  main.c
generic/blinky/: CMakeLists.txt  build.yaml  main.c
generic/blinky-board-generic/: CMakeLists.txt  build.yaml  main.c
generic/echo/: CMakeLists.txt  build.sh  build.yaml  run.sh  server.c
generic/echo-server/: CMakeLists.txt
generic/echo-server/src/: main.c
generic/filesystem/: build.yaml  main.c
generic/filesystem-full/: build.yaml  main.c
generic/hello-world/: build.yaml  main.c
generic/messaging/Publisher/: build.yaml  main.c
generic/messaging/Publisher_1/: CMakeLists.txt  build.yaml  main.c
generic/messaging/Publisher_2/: CMakeLists.txt  build.yaml  main.c
generic/messaging/Subscriber/: main.c
generic/messaging/multipublisher-subscriber/publisher_inside/: CMakeLists.txt  build.yaml  main.c
generic/messaging/multipublisher-subscriber/publisher_outside/: CMakeLists.txt  build.yaml  main.c
generic/messaging/multipublisher-subscriber/subscriber_temp/: CMakeLists.txt  build.yaml  main.c
generic/messaging/publisher/: CMakeLists.txt  main.c
generic/messaging/subscriber/: CMakeLists.txt  build.yaml  main.c
generic/modbus-client/: CMakeLists.txt  build.yaml  main.c
generic/sensor-rng/: CMakeLists.txt  build.yaml  main.c
generic/shared-filesystem/shared-filesystem-reader/: build.yaml  run.sh
generic/shared-filesystem/shared-filesystem-writer/: build.yaml
generic/webserver/: CMakeLists.txt  build.yaml  main.c
samples/edge-impulse/motion-classifier/: CMakeLists.txt  build.sh
